Alignment fixes
Removed extra padding causing ‘leave room’ button to cut off at the
bottom of the screen.
Added dark background to html to remove white glare on over scroll.

--- a/src/assets/css/styleNew.css
+++ b/src/assets/css/styleNew.css
@@ -44,6 +44,7 @@ h7 {
 html {
     overflow: scroll;
     overflow-x: hidden;
+    background: #151924;
 }
 ::-webkit-scrollbar {
     width: 0px;  /* remove scrollbar space */
